tests/ui/parser/bad-let-as-field.rs
struct Foo {
    let: i32,
    //~^ ERROR expected identifier, found keyword
}

fn main() {}
